--- a/assets/css/style_index.css
+++ b/assets/css/style_index.css
@@ -3,6 +3,10 @@
      position: fixed;
  }
 
+ * {
+     cursor: url(http://www.rw-designer.com/cursor-extern.php?id=1659), auto !important;
+ }
+
  /* Backgroud Image */
 
  #page1 {
@@ -54,23 +58,55 @@
  }
 
  img:hover {
-    animation: shake 0.9s;
-    animation-iteration-count: infinite;
-  }
-  
-  @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
-  }
+     animation: shake 0.9s;
+     animation-iteration-count: infinite;
+ }
+
+ @keyframes shake {
+     0% {
+         transform: translate(1px, 1px) rotate(0deg);
+     }
+
+     10% {
+         transform: translate(-1px, -2px) rotate(-1deg);
+     }
+
+     20% {
+         transform: translate(-3px, 0px) rotate(1deg);
+     }
+
+     30% {
+         transform: translate(3px, 2px) rotate(0deg);
+     }
+
+     40% {
+         transform: translate(1px, -1px) rotate(1deg);
+     }
+
+     50% {
+         transform: translate(-1px, 2px) rotate(-1deg);
+     }
+
+     60% {
+         transform: translate(-3px, 1px) rotate(0deg);
+     }
+
+     70% {
+         transform: translate(3px, 1px) rotate(-1deg);
+     }
+
+     80% {
+         transform: translate(-1px, -1px) rotate(1deg);
+     }
+
+     90% {
+         transform: translate(1px, 2px) rotate(0deg);
+     }
+
+     100% {
+         transform: translate(1px, -2px) rotate(-1deg);
+     }
+ }
 
  #logo {
      color: black;
