--- a/assets/css/style_index.css
+++ b/assets/css/style_index.css
@@ -1,188 +1,172 @@
- /* Backgroud Image */
- body {
-     position: fixed;
- }
+/* Backgroud Image */
+body {
+  position: fixed;
+}
 
- * {
-     cursor: url(http://www.rw-designer.com/cursor-extern.php?id=1659), auto !important;
- }
-
-
- #pegasus{
-    animation-timing-function: linear;
-    position: relative;
-    -webkit-animation: mymove 6s infinite;
-    animation: mymove 50s infinite;
-    z-index: 100;
+* {
+  cursor: url(http://www.rw-designer.com/cursor-extern.php?id=1659), auto !important;
+}
+/* Pegasus Animation */
+#pegasus {
+  animation-timing-function: linear;
+  position: relative;
+  -webkit-animation: mymove 6s infinite;
+  animation: mymove 50s infinite;
+  z-index: 100;
 }
 
 @keyframes mymove {
-    from {
-        left: -300px;
-    }
+  from {
+    left: -300px;
+  }
 
-    to {
-        left: 1400px;
-    }
+  to {
+    left: 1400px;
+  }
+}
+
+/* Backgroud Image */
+
+#page1 {
+  z-index: 1;
+  width: 100%;
+  background-repeat: no-repeat;
+  margin: -125px 0 0 0;
+  -webkit-animation: zoomin 300s 2;
+}
+
+@-webkit-keyframes zoomin {
+  0% {
+    -webkit-transform: scale(1);
+  }
+
+  100% {
+    -webkit-transform: scale(2);
+  }
+}
+/* Gods */
+#characters {
+  float: left;
+  z-index: 1;
+  position: absolute;
+  margin: -738px 0 0 585px;
+}
+
+#car1 {
+  width: 150px;
+}
+
+#car2 {
+  width: 308px;
+}
+
+#car3 {
+  width: 186px;
+}
+
+#car4 {
+  width: 174px;
+}
+
+/* image shake */
+img:hover {
+  animation: shake 0.9s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
 
 
- /* Backgroud Image */
+/* Logo */
+#logo {
+  color: black;
+  font-family: serif;
+  font-size: 80px;
 
- #page1 {
-     z-index: 1;
-     width: 100%;
-     background-repeat: no-repeat;
-     margin:-125px 0 0 0;
-     -webkit-animation: zoomin 300s 2;
- }
+  z-index: 20;
+  position: absolute;
+  margin: -826px 0 0 681px;
+}
 
- @-webkit-keyframes zoomin {
-     0% {
-         -webkit-transform: scale(1);
-     }
+/* Backgroud Sounds */
+#bsound {
+  position: absolute;
+  z-index: 3;
+  display: none;
+}
 
-     100% {
-         -webkit-transform: scale(2);
-     }
- }
+/* @ Media */
+@media screen and (max-width: 1440px) {
+  #page1 {
+    width: 100%;
+    height: 821px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
 
+@media screen and (max-width: 768px) {
+  #page1 {
+    width: 100%;
+    height: 233px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
 
- #characters {
+@media screen and (max-width: 640px) {
+  #page1 {
+    width: 100%;
+    height: 233px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
-     float: left;
-     z-index: 1;
-     position: absolute;
-     margin: -738px 0 0 585px;
- }
-
-
- #car1 {
-
-     width: 150px;
- }
-
- #car2 {
-
-     width: 308px;
- }
-
- #car3 {
-
-     width: 186px;
- }
-
- #car4 {
-
-     width: 174px;
- }
-
- img:hover {
-     animation: shake 0.9s;
-     animation-iteration-count: infinite;
- }
-
- @keyframes shake {
-     0% {
-         transform: translate(1px, 1px) rotate(0deg);
-     }
-
-     10% {
-         transform: translate(-1px, -2px) rotate(-1deg);
-     }
-
-     20% {
-         transform: translate(-3px, 0px) rotate(1deg);
-     }
-
-     30% {
-         transform: translate(3px, 2px) rotate(0deg);
-     }
-
-     40% {
-         transform: translate(1px, -1px) rotate(1deg);
-     }
-
-     50% {
-         transform: translate(-1px, 2px) rotate(-1deg);
-     }
-
-     60% {
-         transform: translate(-3px, 1px) rotate(0deg);
-     }
-
-     70% {
-         transform: translate(3px, 1px) rotate(-1deg);
-     }
-
-     80% {
-         transform: translate(-1px, -1px) rotate(1deg);
-     }
-
-     90% {
-         transform: translate(1px, 2px) rotate(0deg);
-     }
-
-     100% {
-         transform: translate(1px, -2px) rotate(-1deg);
-     }
- }
-
- #logo {
-     color: black;
-     font-family: serif;
-     font-size: 80px;
-
-     z-index: 20;
-     position: absolute;
-     margin: -826px 0 0 681px;
- }
-
- #bsound {
-     position: absolute;
-     z-index: 3;
-     display: none;
- }
-
-
- @media screen and (max-width: 1440px) {
-
-
-     #page1 {
-
-         width: 100%;
-         height: 821px;
-         background-repeat: no-repeat;
-         background-size: cover;
-     }
-
- }
-
- @media screen and (max-width: 768px) {
-
-     #page1 {
-
-         width: 100%;
-         height: 233px;
-         background-repeat: no-repeat;
-         background-size: cover;
-     }
-
- }
-
- @media screen and (max-width: 640px) {
-
-     #page1 {
-
-         width: 100%;
-         height: 233px;
-         background-repeat: no-repeat;
-         background-size: cover;
-     }
-
-     body {
-
-         background-color: blanchedalmond;
-
-     }
- }
+  body {
+    background-color: blanchedalmond;
+  }
+}
